--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -36,13 +36,27 @@
   > * {
     text-align: left;
     min-height: 50vh;
-    padding: 2em 1em;
+    padding: 2em 2em;
     margin: 0.75em;
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
   }
 
   h1 {
+    margin-top: 0;
+    font-weight: 800;
+    font-size: 3em;
+    @include breakpoint(md) {
+        font-size: 2.2em;
+    }
+  }
+
+  h2 {
+    margin-bottom: 0;
+  }
+  h4 {
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
     margin-top: 0;
   }
 
@@ -79,7 +93,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   padding: 0;
-  font-size: 1.4em;
+  font-size: 1.2em;
 
   .play {
     height: 100%;
@@ -90,21 +104,23 @@
   }
 
   .main-bt {
-      color: white;
-      background: color(blue);
-      //transform: scale(1.2)
+    color: white;
+    background: color(blue);
+    //transform: scale(1.2)
   }
   > div {
-      width: 140%;
-      height: 100%;
-      display:flex;
-      justify-content: center;
-      flex-direction: column;
-      padding: 0 2em;
-      z-index: 2;
-      
+      width: 200%;
+    
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 2em;
+    z-index: 2;
+    @include breakpoint(md) {
+        width: 140%;
+    }
   }
-
 }
 
 .top-tracks {
@@ -121,5 +137,6 @@
 
 .play-history {
   grid-area: history;
-  background-color: lightgrey;
+  background-color: color(dark-blue);
+  color: white;
 }
