--- a/src/components/Create.scss
+++ b/src/components/Create.scss
@@ -13,12 +13,15 @@
 }
 
 .description {
-  font-size: 0.5em;
+  font-size: 0.6em;
   margin-top: 5em;
   letter-spacing: 0.145em;
   text-transform: uppercase;
-  position: absolute;
-  left: 30%;
+word-wrap: unset;
+  @include breakpoint(sm) {
+    font-size: 0.5em;
+  }
+  
 }
 
 .numbers {
@@ -48,6 +51,7 @@
 
     @include breakpoint(md) {
       font-size: 1.75em;
+      width: 100%;
     }
   }
 }
@@ -55,11 +59,12 @@
 .question-graphic {
   height: 40vh;
   width: 96%;
-  padding: 1em;
+  
   object-fit: cover;
   @include breakpoint(sm) {
     height: 80vh;
     width: 25vw;
+    padding: 1em;
   }
 }
 
@@ -75,10 +80,12 @@
 .question-section {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
   height: 30vh;
   padding: 1em;
+  font-size: 0.8em;
   justify-content: space-between;
+  position: relative;
   .text-area {
     text-align: left;
     font-size: 1.4em;
@@ -94,6 +101,7 @@
   }
   @include breakpoint(sm) {
     height: 50vh;
+    width: 60vw;
   }
 }
 
@@ -107,13 +115,54 @@
   position: absolute;
   bottom: 20%;
   right: 0;
-  font-size: 8em;
-  opacity: 0.2;
+  font-size: 10em;
+  opacity: 0.1;
   font-weight: 900;
   text-transform: uppercase;
+   
+  display: flex;
+  flex-direction: column;
 
+  >* {
+      margin: -1em 0;
+  }
   @include breakpoint(sm) {
     bottom: 30%;
     font-size: 12em;
+    opacity: 0.2;
   }
+}
+
+
+.next {
+    background-color: transparent;
+    border: none;
+
+    font-size: 4em;
+}
+
+.back {
+    background-color: transparent;
+    border: none;
+    font-size: 3.5em;
+    opacity: 0.5;
+}
+
+.bottom-nav {
+    position: absolute;
+    bottom: 0;
+    right: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90vw;
+    padding: 1em;
+
+    @include breakpoint(sm) {
+        width: 68vw;
+        padding: 2em;
+        right: 0;
+    }
 }
