--- a/src/components/Create.scss
+++ b/src/components/Create.scss
@@ -4,6 +4,10 @@
   background: color(red);
   color: white;
   height: 100vh;
+  //max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+ 
 }
 
 .scale-container {
@@ -56,8 +60,8 @@
 }
 
 .question-graphic {
-  height: 40vh;
-  width: 96%;
+  height: 30vh;
+  width: 100vw;
 
   object-fit: cover;
   @include breakpoint(sm) {
@@ -70,9 +74,17 @@
 .main-section {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+
+  display: grid;
+  //grid-template-rows: 40% 60%;
+  max-width: 100vw;
+
   @include breakpoint(sm) {
+      display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -80,10 +92,10 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  height: 30vh;
+  
   padding: 1em;
   font-size: 0.8em;
-  justify-content: space-between;
+  justify-content: space-around;
   position: relative;
   .text-area {
     text-align: left;
@@ -112,7 +124,7 @@
 
 .category {
   position: absolute;
-  bottom: 20%;
+  bottom: 40%;
   right: 0;
   font-size: 10em;
   opacity: 0.1;
@@ -142,12 +154,12 @@
 .back {
   background-color: transparent;
   border: none;
-  font-size: 3.5em;
+  font-size: 4em;
   opacity: 0.5;
 }
 
 .bottom-nav {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: auto;
 
@@ -155,11 +167,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 90vw;
-  padding: 1em;
+  width: 100vw;
 
   @include breakpoint(sm) {
-    width: 68vw;
+    width: 65vw;
     padding: 2em;
     right: 0;
   }
