--- a/src/components/Create.scss
+++ b/src/components/Create.scss
@@ -7,7 +7,6 @@
   //max-height: 100vh;
   display: flex;
   flex-direction: column;
- 
 }
 
 .scale-container {
@@ -40,6 +39,7 @@
   span {
     font-size: 1.5em;
     position: relative;
+    cursor: pointer;
     .unselected {
       opacity: 0.4;
     }
@@ -75,13 +75,12 @@
   display: flex;
   flex-direction: column;
 
-
   display: grid;
   //grid-template-rows: 40% 60%;
   max-width: 100vw;
 
   @include breakpoint(sm) {
-      display: flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -92,7 +91,7 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  
+
   padding: 1em;
   font-size: 0.8em;
   justify-content: space-around;
@@ -147,8 +146,8 @@
 .next {
   background-color: transparent;
   border: none;
-
   font-size: 4em;
+  cursor: pointer;
 }
 
 .back {
@@ -156,6 +155,7 @@
   border: none;
   font-size: 4em;
   opacity: 0.5;
+  cursor: pointer;
 }
 
 .bottom-nav {
@@ -219,7 +219,7 @@
     padding: 0 1em;
   }
   input {
-    margin: 2em 0 ;
+    margin: 2em 0;
     border: none;
     background: transparent;
     border-bottom: 1px solid color(pink);
@@ -249,24 +249,23 @@
   opacity: 0.4;
 }
 
-
 .final-section {
+  display: flex;
+  flex-direction: column;
+
+  @include breakpoint(sm) {
+    flex-direction: row;
+  }
+
+  .input-section {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    font-size: 1.5em;
+  }
 
-    @include breakpoint(sm) {
-        flex-direction: row;
-    }
-
-    .input-section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-size: 1.5em;
-    }
-
-    .main-bt {
-        color: color(blue);
-        background-color: color(pink);
-    }
+  .main-bt {
+    color: color(blue);
+    background-color: color(pink);
+  }
 }
