--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -70,6 +70,22 @@
 
   .music-info {
     font-size: 0.9em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+
+    .position {
+        font-weight: 900;
+        font-size: 2.5em;
+        //border: 1px solid;
+        padding: .6em;
+        //background-color: grey;
+        border-radius: 100%;
+        -webkit-text-stroke-width: 1.5px;
+       opacity: 0.8;
+        //margin: 1em 1em 1em 0;
+    }
   }
 
   @include breakpoint(md) {
@@ -158,12 +174,21 @@
   grid-area: tracks;
   background-color: color(blue);
   color: color(pink);
+
+  .position {
+    -webkit-text-stroke-color: color(pink);
+
+  }
 }
 
 .top-artists {
   grid-area: artists;
   background-color: color(pink);
   color: color(dark-blue);
+  .position {
+    -webkit-text-stroke-color: color(dark-blue);
+
+  }
 }
 
 .play-history {
