--- a/src/components/Landing.scss
+++ b/src/components/Landing.scss
@@ -15,7 +15,7 @@
     font-size: 1.5em;
     margin-top: 2em;
  
-    @include breakpoint(sm) {
+    @include breakpoint(md) {
       font-size: 2em;
     }
   }
@@ -35,7 +35,7 @@
     padding: 1em;
     h1 {
       text-align: center;
-      @include breakpoint(sm) {
+      @include breakpoint(md) {
         text-align: left;
       }
     }
@@ -55,7 +55,7 @@
       cursor: pointer; 
     }
   
-    @include breakpoint(sm) {
+    @include breakpoint(md) {
       align-items: flex-start;
       padding: 6em;
       margin-top: 4em;
@@ -68,7 +68,7 @@
     h1 {
         margin-top: 2em;
       text-align: center;
-      @include breakpoint(sm) {
+      @include breakpoint(md) {
         text-align: left;
       }
     }
@@ -77,24 +77,26 @@
       background-color: color(pink);
     }
     .intro {
-      @include breakpoint(sm) {
+      @include breakpoint(md) {
         align-items: flex-start;
       }
     }
   }
   
   .main-graphic {
-    height: 50vh;
+    height: 50vmax;
     width: 100%;
     object-fit: cover;
   
+
     @include breakpoint(md) {
       position: absolute;
       bottom: 0;
       right: 0;
-      height: 32vmax;
+      height: 60vmin;
+      width: 50%;
       display: block;
-      width: initial;
+      //width: initial;
     }
   }
   
@@ -123,14 +125,14 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        height: 32vmax;
+        height: 60vmin;
         display: block;
-        width: initial;
+        width: 50%;
       }
     }
   
     .intro {
-      @include breakpoint(sm) {
+      @include breakpoint(md) {
         align-items: flex-end;
       }
     }
