--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -92,7 +92,7 @@
     //margin-top: 3em;
     margin-bottom: 3em;
     padding: 1em 10em;
-    height: 120vh;
+    min-height: 120vh;
     max-width: 95vw;
     display: grid;
     grid-template-columns: 33% 33% 33%;
